REGRESSION: High frequency memory warnings cause Safari to hog the CPU doing useless garbage collection https://bugs.webkit.org/show_bug.cgi?id=69774

Throttle the processing of memory pressure events to no more often than once every 5 seconds.

Reviewed by Geoffrey Garen.

No new tests.

* platform/MemoryPressureHandler.cpp:
(WebCore::MemoryPressureHandler::MemoryPressureHandler):
* platform/MemoryPressureHandler.h:
* platform/mac/MemoryPressureHandlerMac.mm:
(WebCore::MemoryPressureHandler::respondToMemoryPressure):


git-svn-id: svn://svn.chromium.org/blink/trunk@97433 bbb929c8-8fbe-4397-9dbb-9b2b20218538