third_party/WebKit/Source/WebCore/platform/MemoryPressureHandler.h
@@ -36,6 +36,9 @@ public:
     friend MemoryPressureHandler& memoryPressureHandler();
 
     void install();
+    void uninstall();
+
+    void holdOff(unsigned);
 
 private:
     MemoryPressureHandler();
@@ -44,6 +47,7 @@ private:
     void respondToMemoryPressure();
 
     bool m_installed;
+    time_t m_lastRespondTime;
 };
  
 // Function to obtain the global memory pressure object.
